--- a/details.html
+++ b/details.html
@@ -246,6 +246,6 @@
       </div>
     </div>
 
-    <script src="src/scripts/details.js"></script>
+    <script src="src/script/details.js"></script>
   </body>
 </html>
