--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         ></path></svg
     ></a>
     <header class="main-header">
-      <img src="src/images/logo.png" alt="Pokemon Logo" class="logo" />
+      <img src="src/images/pokemon-types/logo.png" alt="Pokemon Logo" class="logo" />
 
       <div class="search-container">
         <button class="random" id="random-button">
@@ -135,6 +135,6 @@
 
     <button class="back-to-top" id="back-to-top">🔝</button>
 
-    <script src="src/scripts/list.js"></script>
+    <script src="src/script/list.js"></script>
   </body>
 </html>
